Add ability to get the destination IP address of received packets These patches add the ability to get the destination IP address of received packets. This is useful when a UDP socket has joined multiple multicast groups. By examining the destination IP address, an application can determine which multicast group this packet was sent to.
This patch has been tested on Linux and Windows. I think it will work on other Unixes, but I have not tested that yet.

These patches add additional tests to test this functionality. Since I noticed that the tests did not test the multicast functionality at all, I have also added tests to cover that.

These patches also include the fixes for these bug reports:
1848365 - The -mcastloop boolean option
1838467 - Crash during Tcl exit with multicast groups open
1838459 - Crash with -mcastadd with a shared object
1828920 - Crash with udp_peek

--- a/doc/udp.man
+++ b/doc/udp.man
@@ -93,6 +93,12 @@ With multicast udp the system can choose to receive packets that it has sent
 or it can drop them. This is known as multicast loopback and can be controlled
 using this option. By default the value is true and your application will receive
 its own transmissions.
+ 
+[lst_item "[arg -dstip]"]
+
+Returns the destination IP address of the last packet received.  This is particularly
+useful when a socket has joined multiple multicast groups.  This parameter can be used to
+distinguish which multicast group the packet was sent to.
 
 [list_end]
 
