udp.man uses deprecated commands.
Bug fix from https://sourceforge.net/p/tcludp/bugs/44/

--- a/doc/udp.man
+++ b/doc/udp.man
@@ -28,16 +28,16 @@ socket will be opened on that port. Otherwise the system will choose a port
 and the user can use the [cmd udp_conf] command to obtain the port number
 if required.
 
-[nl]
+[para]
 The following keywords can be used to specify options on the opened socket.
 
 [list_begin definitions]
 
-[lst_item "[arg reuse]"]
+[def "[arg reuse]"]
 Using this keyword sets the SO_REUSEADDR socket option which permits multiple sockets to 
 be bound to the same address/port combination.
 
-[lst_item "[arg ipv6]"]
+[def "[arg ipv6]"]
 By default a IPv4 socket is created. When keyword [arg ipv6] is specified an IPv6
 socket is opened. 
 
@@ -46,7 +46,7 @@ socket is opened.
 [call [cmd "udp_conf"] [arg "sock"] [arg "host"] [arg "port"]]
 
 [emph Deprecated] in favour of the standard Tcl [cmd fconfigure] command.
-[nl]
+[para]
 [cmd udp_conf] in this configuration is used to specify the remote destination
 for packets written to this [arg "sock"]. You must call this command before
 writing data to the UDP socket.
@@ -56,32 +56,32 @@ writing data to the UDP socket.
 	[arg [opt -mcastgroups]] [arg [opt "-mcastloop bool"]]]
 
 [emph Deprecated] in favour of the standard Tcl [cmd fconfigure] command.
-[nl]
+[para]
 In addition to being used to configure the remote host, the [cmd "udp_conf"]
 command is used to obtain information about the UDP socket. NOTE all these options
 are now available using the standard Tcl [cmd fconfigure] command.
 
 [list_begin definitions]
 
-[lst_item "[arg -myport]"]
+[def "[arg -myport]"]
 Returns the local port number of the socket.
 
-[lst_item "[arg -remote]"]
+[def "[arg -remote]"]
 Returns the remote hostname and port number as set using 
 [cmd udp_conf] [arg sock] [arg host] [arg port].
 
-[lst_item "[arg -peer]"]
+[def "[arg -peer]"]
 Returns the remote hostname and port number for the packet most recently
 received by this socket.
 
-[lst_item "[arg -broadcast\ [opt boolean]]"]
+[def "[arg -broadcast\ [opt boolean]]"]
 UDP packets can listen and send on the broadcast address. For some systems 
 a flag must be set on the socket to use broadcast. 
 With no argument this option will return the broadcast setting. With a 
 boolean argument the setting can be modified. This option is not permitted when
 using IPv6.
 
-[lst_item "[arg -ttl\ [opt count]]"]
+[def "[arg -ttl\ [opt count]]"]
 
 The time-to-live is given as the number of router hops the packet may do. For
 multicast packets this is important in specifying the distribution of the
@@ -89,26 +89,26 @@ packet. The system default for multicast is 1 which restricts the packet
 to the local subnet. To permit packets to pass routers, you must increase the
 ttl. A value of 31 should keep it within a site, while 255 is global.
 
-[lst_item "[arg -mcastadd] groupaddr"]
-[lst_item "[arg -mcastadd] \"groupaddr netwif\""]
-[lst_item "[arg -mcastdrop] groupaddr"]
-[lst_item "[arg -mcastdrop] \"groupaddr netwif\""]
-[lst_item "[arg -mcastgroups]"]
+[def "[arg -mcastadd] groupaddr"]
+[def "[arg -mcastadd] \"groupaddr netwif\""]
+[def "[arg -mcastdrop] groupaddr"]
+[def "[arg -mcastdrop] \"groupaddr netwif\""]
+[def "[arg -mcastgroups]"]
 
 [package tcludp] sockets can support IPv4 and IPv6 multicast operations. To receive
 multicast packets the application has to notify the operating system that
 it should join a particular multicast group. For IPv4 these are specified as addresses
 in the range 224.0.0.0 to 239.255.255.255.
-[nl]
+[para]
 When specifying only the [arg groupaddr] the system will determine the network interface to use. 
 Specifying the [arg netwif] will join a multicast group on a specific network interface.
 This is useful on a multihomed system with multiple network interfaces.
 On windows you must specify the network interface index. For other platforms the network
 interface (e.g. 'eth0') name can be specified. 
-[nl]
+[para]
 To view the current set of multicast groups for a channel use [arg -mcastgroups]
 
-[lst_item "[arg -mcastloop\ [opt boolean]]"]
+[def "[arg -mcastloop\ [opt boolean]]"]
 
 With multicast udp the system can choose to receive packets that it has sent
 or it can drop them. This is known as multicast loopback and can be controlled
@@ -121,7 +121,7 @@ its own transmissions.
 
 Examine a packet without removing it from the buffer. Option [arg buffersize] specifies the 
 maximum buffer size. Value must be between 0 and 16.
-[nl]
+[para]
 This function is not available on windows.
 
 [list_end]
